RESOLVED FIXED 137146
[CSS Grid Layout] Empty string case already covered by containesOnlyWhiteSpace.
https://bugs.webkit.org/show_bug.cgi?id=137146
Summary [CSS Grid Layout] Empty string case already covered by containesOnlyWhiteSpace.
Javier Fernandez
Reported 2014-09-26 06:14:12 PDT
[CSS Grid Layout] Empty string case already covered by containesOnlyWhiteSpace.
Attachments
Patch (1.60 KB, patch)
2014-09-26 06:16 PDT, Javier Fernandez
no flags
Patch (1.62 KB, patch)
2014-09-26 06:31 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2014-09-26 06:16:43 PDT
WebKit Commit Bot
Comment 2 2014-09-26 06:17:43 PDT
Attachment 238709 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Javier Fernandez
Comment 3 2014-09-26 06:31:18 PDT
WebKit Commit Bot
Comment 4 2014-09-26 07:27:57 PDT
Comment on attachment 238711 [details] Patch Clearing flags on attachment: 238711 Committed r174007: <http://trac.webkit.org/changeset/174007>
WebKit Commit Bot
Comment 5 2014-09-26 07:28:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.