[CSS Grid Layout] Empty string case already covered by containesOnlyWhiteSpace. https://bugs.webkit.org/show_bug.cgi?id=137146

Reviewed by Sergio Villar Senin.

When checking out for white-space only strings in the grid-template-areas
property values, it's not neccessary to check out for empty strings as
such case is already covered.

No new tests, already covered by fast/css-grid-layout/grid-template-areas-empty-string-crash.html.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseGridTemplateAreasRow):


Canonical link: https://commits.webkit.org/154957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174007 268f45cc-cd09-0410-ab3c-d52691b4dbfc